--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Mail-DataFeed-Abusix
 author  = Marc Bradshaw <marc@marcbradshaw.net>
 license = Perl_5
 copyright_holder = Marc Bradshaw
-copyright_year   = 2018
+copyright_year   = 2020
 
 [MetaJSON]
 [MetaResources]
@@ -15,7 +15,7 @@ repository.type   = git
 [@Basic]
 
 [AutoVersion]
-format = 1.{{ cldr('yyyyMMdd') }}
+format = 1.{{ cldr('yyyyMMdd') }}.1
 
 [Git::Contributors]
 
