Switch to a purely numeric version string

--- a/dist.ini
+++ b/dist.ini
@@ -15,7 +15,7 @@ repository.type   = git
 [@Basic]
 
 [AutoVersion]
-format = 1.{{ cldr('yyyyMMdd') }}.1
+format = 2.{{ cldr('yyyyMMdd') }}
 
 [Git::Contributors]
 
